--- a/MNIST_classification.ipynb
+++ b/MNIST_classification.ipynb
@@ -221,10 +221,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### BEGIN SOLUTION ###\n",
-    " \n",
-    "\n",
-    "### END SOLUTION ###"
+"    \"### BEGIN SOLUTION ###\\n\",\n",
+"    \"\\n\",\n",
+"    \"# Feedforward NN\\n\",\n",
+"    \"fnn = Network(sizes=[784, 128, 64, 10], learning_rate=0.1, epochs=50)\\n\",\n",
+"    \"fnn.fit(x_train, y_train, x_val, y_val)\\n\",\n",
+"    \"\\n\",\n",
+"    \"# Feedforward NN + Cosine Annealing\\n\",\n",
+"    \"fnn_cosine = Network(sizes=[784, 128, 64, 10], learning_rate=0.1, epochs=50)\\n\",\n",
+"    \"fnn_cosine.fit(x_train, y_train, x_val, y_val, cosine_annealing_lr=True)\\n\",\n",
+"    \"\\n\",\n",
+"    \"# Residual NN\\n\",\n",
+"    \"res_nn = ResNetwork(sizes=[784, 128, 128, 10], learning_rate=0.1, epochs=50)\\n\",\n",
+"    \"res_nn.fit(x_train, y_train, x_val, y_val)\\n\",\n",
+"    \"\\n\",\n",
+"    \"# PyTorch NN\\n\",\n",
+"    \"torch_nn = TorchNetwork(sizes=[784, 128, 64, 10], learning_rate=0.2, epochs=50, random_state=GLOBAL_RANDOM_STATE)\\n\",\n",
+"    \"torch_nn.fit(train_loader, val_loader)\\n\",\n",
+"    \"\\n\",\n",
+"    \"# Compute accuracies for all the models\\n\",\n",
+"    \"fnn_train_acc = float(fnn.compute_accuracy(x_train, y_train))\\n\",\n",
+"    \"fnn_val_acc = float(fnn.compute_accuracy(x_val, y_val))\\n\",\n",
+"    \"\\n\",\n",
+"    \"fnn_cosine_train_acc = float(fnn_cosine.compute_accuracy(x_train, y_train))\\n\",\n",
+"    \"fnn_cosine_val_acc = float(fnn_cosine.compute_accuracy(x_val, y_val))\\n\",\n",
+"    \"\\n\",\n",
+"    \"res_nn_train_acc = float(res_nn.compute_accuracy(x_train, y_train))\\n\",\n",
+"    \"res_nn_val_acc = float(res_nn.compute_accuracy(x_val, y_val))\\n\",\n",
+"    \"\\n\",\n",
+"    \"torch_train_acc = torch_nn.predict(train_loader)\\n\",\n",
+"    \"torch_val_acc = torch_nn.predict(val_loader)\\n\",\n",
+"    \"\\n\",\n",
+"    \"# Build dictionary\\n\",\n",
+"    \"results = {\\n\",\n",
+"    \"    \\\"Feedforward NN\\\": (fnn_train_acc, fnn_val_acc),\\n\",\n",
+"    \"    \\\"Feedforward + CosineAnnealing\\\": (fnn_cosine_train_acc, fnn_cosine_val_acc),\\n\",\n",
+"    \"    \\\"Residual NN\\\": (res_nn_train_acc, res_nn_val_acc),\\n\",\n",
+"    \"    \\\"Torch NN\\\": (torch_train_acc, torch_val_acc)\\n\",\n",
+"    \"}\\n\",\n",
+"    \"\\n\",\n",
+"    \"# Plot\\n\",\n",
+"    \"models = list(results.keys())\\n\",\n",
+"    \"train_accs = [results[m][0] for m in models]\\n\",\n",
+"    \"val_accs = [results[m][1] for m in models]\\n\",\n",
+"    \"\\n\",\n",
+"    \"x = np.arange(len(models))\\n\",\n",
+"    \"width = 0.35\\n\",\n",
+"    \"\\n\",\n",
+"    \"plt.figure(figsize=(10,6))\\n\",\n",
+"    \"plt.bar(x - width/2, train_accs, width, label='Train')\\n\",\n",
+"    \"plt.bar(x + width/2, val_accs, width, label='Validation')\\n\",\n",
+"    \"\\n\",\n",
+"    \"plt.xticks(x, models, rotation=20)\\n\",\n",
+"    \"plt.ylabel(\\\"Accuracy\\\")\\n\",\n",
+"    \"plt.title(\\\"MNIST Classification Accuracy\\\")\\n\",\n",
+"    \"plt.legend()\\n\",\n",
+"    \"plt.grid(axis='y')\\n\",\n",
+"    \"plt.show()\\n\",\n",
+"    \"\\n\",\n",
+"    \"### END SOLUTION ###\\n\"\n"
    ]
   }
  ],
