--- a/MNIST_classification.ipynb
+++ b/MNIST_classification.ipynb
@@ -221,66 +221,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### BEGIN SOLUTION ###\\n",
-    "\\n",
-    "# Feedforward NN\\n",
-    "fnn = Network(sizes=[784, 128, 64, 10], learning_rate=0.1, epochs=50)\\n",
-    "fnn.fit(x_train, y_train, x_val, y_val)\\n",
-    "\\n",
-    "# Feedforward NN + Cosine Annealing\\n",
-    "fnn_cosine = Network(sizes=[784, 128, 64, 10], learning_rate=0.1, epochs=50)\\n",
-    "fnn_cosine.fit(x_train, y_train, x_val, y_val, cosine_annealing_lr=True)\\n",
-    "\\n",
-    "# Residual NN\\n",
-    "res_nn = ResNetwork(sizes=[784, 128, 128, 10], learning_rate=0.1, epochs=50)\\n",
-    "res_nn.fit(x_train, y_train, x_val, y_val)\\n",
-    "\\n",
-    "# PyTorch NN\\n",
-    "torch_nn = TorchNetwork(sizes=[784, 128, 64, 10], learning_rate=0.2, epochs=50, random_state=GLOBAL_RANDOM_STATE)\\n",
-    "torch_nn.fit(train_loader, val_loader)\\n",
-    "\\n",
-    "# Compute accuracies for all the models\\n",
-    "fnn_train_acc = float(fnn.compute_accuracy(x_train, y_train))\\n",
-    "fnn_val_acc = float(fnn.compute_accuracy(x_val, y_val))\\n",
-    "\\n",
-    "fnn_cosine_train_acc = float(fnn_cosine.compute_accuracy(x_train, y_train))\\n",
-    "fnn_cosine_val_acc = float(fnn_cosine.compute_accuracy(x_val, y_val))\\n",
-    "\\n",
-    "res_nn_train_acc = float(res_nn.compute_accuracy(x_train, y_train))\\n",
-    "res_nn_val_acc = float(res_nn.compute_accuracy(x_val, y_val))\\n",
-    "\\n",
-    "torch_train_acc = torch_nn.predict(train_loader)\\n",
-    "torch_val_acc = torch_nn.predict(val_loader)\\n",
-    "\\n",
-    "# Build dictionary\\n",
-    "results = {\\n",
-    "    \\\"Feedforward NN\\\": (fnn_train_acc, fnn_val_acc),\\n",
-    "    \\\"Feedforward + CosineAnnealing\\\": (fnn_cosine_train_acc, fnn_cosine_val_acc),\\n",
-    "    \\\"Residual NN\\\": (res_nn_train_acc, res_nn_val_acc),\\n",
-    "    \\\"Torch NN\\\": (torch_train_acc, torch_val_acc)\\n",
-    "}\\n",
-    "\\n",
-    "# Plot\\n",
-    "models = list(results.keys())\\n",
-    "train_accs = [results[m][0] for m in models]\\n",
-    "val_accs = [results[m][1] for m in models]\\n",
-    "\\n",
-    "x = np.arange(len(models))\\n",
-    "width = 0.35\\n",
-    "\\n",
-    "plt.figure(figsize=(10,6))\\n",
-    "plt.bar(x - width/2, train_accs, width, label='Train')\\n",
-    "plt.bar(x + width/2, val_accs, width, label='Validation')\\n",
-    "\\n",
-    "plt.xticks(x, models, rotation=20)\\n",
-    "plt.ylabel(\\\"Accuracy\\\")\\n",
-    "plt.title(\\\"MNIST Classification Accuracy\\\")\\n",
-    "plt.legend()\\n",
-    "plt.grid(axis='y')\\n",
-    "plt.show()\\n",
-    "\\n",
-    "### END SOLUTION ###\\n"
-   ]
+    "### BEGIN SOLUTION ###",
+    "",
+    "# Feedforward NN",
+    "fnn = Network(sizes=[784, 128, 64, 10], learning_rate=0.1, epochs=50)",
+    "fnn.fit(x_train, y_train, x_val, y_val)",
+    "",
+    "# Feedforward NN + Cosine Annealing",
+    "fnn_cosine = Network(sizes=[784, 128, 64, 10], learning_rate=0.1, epochs=50)",
+    "fnn_cosine.fit(x_train, y_train, x_val, y_val, cosine_annealing_lr=True)",
+    "",
+    "# Residual NN",
+    "res_nn = ResNetwork(sizes=[784, 128, 128, 10], learning_rate=0.1, epochs=50)",
+    "res_nn.fit(x_train, y_train, x_val, y_val)",
+    "",
+    "# PyTorch NN",
+    "torch_nn = TorchNetwork(sizes=[784, 128, 64, 10], learning_rate=0.2, epochs=50, random_state=GLOBAL_RANDOM_STATE)",
+    "torch_nn.fit(train_loader, val_loader)",
+    "",
+    "# Compute accuracies for all the models",
+    "fnn_train_acc = float(fnn.compute_accuracy(x_train, y_train))",
+    "fnn_val_acc = float(fnn.compute_accuracy(x_val, y_val))",
+    "",
+    "fnn_cosine_train_acc = float(fnn_cosine.compute_accuracy(x_train, y_train))",
+    "fnn_cosine_val_acc = float(fnn_cosine.compute_accuracy(x_val, y_val))",
+    "",
+    "res_nn_train_acc = float(res_nn.compute_accuracy(x_train, y_train))",
+    "res_nn_val_acc = float(res_nn.compute_accuracy(x_val, y_val))",
+    "",
+    "torch_train_acc = torch_nn.predict(train_loader)",
+    "torch_val_acc = torch_nn.predict(val_loader)",
+    "",
+    "# Build dictionary",
+    "results = {",
+    "    \"Feedforward NN\": (fnn_train_acc, fnn_val_acc),",
+    "    \"Feedforward + CosineAnnealing\": (fnn_cosine_train_acc, fnn_cosine_val_acc),",
+    "    \"Residual NN\": (res_nn_train_acc, res_nn_val_acc),",
+    "    \"Torch NN\": (torch_train_acc, torch_val_acc)",
+    "}",
+    "",
+    "# Plot",
+    "models = list(results.keys())",
+    "train_accs = [results[m][0] for m in models]",
+    "val_accs = [results[m][1] for m in models]",
+    "",
+    "x = np.arange(len(models))",
+    "width = 0.35",
+    "",
+    "plt.figure(figsize=(10,6))",
+    "plt.bar(x - width/2, train_accs, width, label='Train')",
+    "plt.bar(x + width/2, val_accs, width, label='Validation')",
+    "",
+    "plt.xticks(x, models, rotation=20)",
+    "plt.ylabel(\"Accuracy\")",
+    "plt.title(\"MNIST Classification Accuracy\")",
+    "plt.legend()",
+    "plt.grid(axis='y')",
+    "plt.show()",
+    "",
+    "### END SOLUTION ###"
+]
   }
  ],
  "metadata": {
